# invoice-agent

./: .dockerignore  .gitignore  Dockerfile.fastapi  Dockerfile.gradio  README.md  docker-compose.yml  pyproject.toml  testing_result.json
backup/n8n_data/: database.sqlite
gradio_app/: app.py
n8n-stack/: docker-compose.yml
n8n-stack/n8n_data/: config
n8n_workflow/: Invoice_OCR_Workflow.json  Upload_Product_List_Workflow.json
src/: app.py  service.py
src/gradio_app/: app.py
src/invoice_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/models/: orders.py
src/service/: ocr_processor.py  service.py
src/utils/: fuzzy_matcher.py  image_checker.py  preprocess.py
test_data/: txt.json
